[gd_scene load_steps=43 format=3 uid="uid://my073joldnn2"]

[ext_resource type="Shader" uid="uid://u00pcqkterl1" path="res://shaders/global_materials/conscious_echo.gdshader" id="1_60ee8"]
[ext_resource type="Script" uid="uid://dwpn5kdcjyfto" path="res://scripts/entity/enemy/conscious_echo/conscious_echo.gd" id="1_xnqx8"]
[ext_resource type="Texture2D" uid="uid://dapqfibwa4e6p" path="res://sprites/entity/enemy/lab/conscious_echo.png" id="2_xnqx8"]
[ext_resource type="Script" uid="uid://dpg4m48o2dkqs" path="res://scripts/entity/enemy/_abstract/abstract_brain.gd" id="4_0415p"]
[ext_resource type="Script" uid="uid://bym8j54wxotgn" path="res://scripts/entity/enemy/conscious_echo/conscious_echo_sprite.gd" id="4_8303t"]
[ext_resource type="Script" uid="uid://etoygvxlydyj" path="res://scripts/entity/enemy/conscious_echo/wait.gd" id="6_7ubij"]
[ext_resource type="Script" uid="uid://tmm17tf7g3y4" path="res://scripts/entity/enemy/conscious_echo/walk_behavior.gd" id="7_qep5k"]
[ext_resource type="Script" uid="uid://vomvxrsh7vjc" path="res://scripts/entity/enemy/_generic/Condition/chance_condition.gd" id="8_shifw"]
[ext_resource type="Script" uid="uid://bf5fdjawmi5rl" path="res://scripts/entity/enemy/conscious_echo/attack_behavior.gd" id="9_6xbpf"]
[ext_resource type="Script" uid="uid://b7hxvedk3pqxi" path="res://scripts/entity/enemy/conscious_echo/turn_behavior.gd" id="10_4nkpq"]
[ext_resource type="Script" uid="uid://e6if7bqwopta" path="res://scripts/entity/enemy/_generic/Condition/player_in_range_condition.gd" id="10_tta62"]
[ext_resource type="Script" uid="uid://bk3pf3ff5y3hk" path="res://scripts/entity/enemy/_generic/Condition/at_edge_condition.gd" id="12_uwbon"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84d25"]
size = Vector2(14, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0415p"]
shader = ExtResource("1_60ee8")
shader_parameter/custom_alpha = 0.8
shader_parameter/NUM_LAYERS = 15.0

[sub_resource type="AtlasTexture" id="AtlasTexture_60ee8"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnqx8"]
atlas = ExtResource("2_xnqx8")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0415p"]
atlas = ExtResource("2_xnqx8")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8303t"]
atlas = ExtResource("2_xnqx8")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ubij"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qep5k"]
atlas = ExtResource("2_xnqx8")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shifw"]
atlas = ExtResource("2_xnqx8")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xbpf"]
atlas = ExtResource("2_xnqx8")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nkpq"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tydc1"]
atlas = ExtResource("2_xnqx8")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_poqkd"]
atlas = ExtResource("2_xnqx8")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3b1d"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tta62"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwbon"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mhkl"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqa46"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_meuk5"]
atlas = ExtResource("2_xnqx8")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuh51"]
atlas = ExtResource("2_xnqx8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnm0i"]
atlas = ExtResource("2_xnqx8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b7ij"]
atlas = ExtResource("2_xnqx8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkbcf"]
atlas = ExtResource("2_xnqx8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8303t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60ee8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnqx8")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_60ee8")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_0415p")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_8303t")
}, {
"duration": 0.33,
"texture": SubResource("AtlasTexture_7ubij")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_qep5k")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_shifw")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_6xbpf")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_4nkpq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_tydc1")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_poqkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3b1d")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_tta62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwbon")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mhkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqa46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meuk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqa46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mhkl")
}],
"loop": false,
"name": &"Turn",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuh51")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_dnm0i")
}],
"loop": false,
"name": &"Walking",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_5b7ij")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_qkbcf")
}],
"loop": false,
"name": &"Walking2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuh51")
}],
"loop": false,
"name": &"Walking3",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7ubij"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qep5k"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Attack", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_8303t"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Idle", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_shifw"]
resource_name = "walk"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"Walking", 1.0, false],
"method": &"play"
}, {
"args": [&"Walking2", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Brain/WalkBehavior")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.45),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3],
"method": &"enqueue_step"
}]
}

[sub_resource type="Animation" id="Animation_uwbon"]
resource_name = "turn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Turn", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"turn"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qep5k"]
_data = {
&"RESET": SubResource("Animation_7ubij"),
&"attack": SubResource("Animation_qep5k"),
&"idle": SubResource("Animation_8303t"),
&"turn": SubResource("Animation_uwbon"),
&"walk": SubResource("Animation_shifw")
}

[node name="ConsciousEcho" type="CharacterBody2D" node_paths=PackedStringArray("brain", "sprite_for_facing")]
collision_layer = 32
collision_mask = 11264
script = ExtResource("1_xnqx8")
brain = NodePath("Brain")
max_hp = 20.0
sprite_for_facing = NodePath("AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -2
position = Vector2(1, -16)
shape = SubResource("RectangleShape2D_84d25")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("anim_player")]
material = SubResource("ShaderMaterial_0415p")
position = Vector2(1, -32)
sprite_frames = SubResource("SpriteFrames_8303t")
animation = &"Turn"
autoplay = "Idle"
script = ExtResource("4_8303t")
anim_player = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_qep5k")
}
autoplay = "idle"

[node name="EdgeRaycast" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(8, 32)

[node name="Brain" type="Node2D" parent="." node_paths=PackedStringArray("behaviors")]
script = ExtResource("4_0415p")
behaviors = [NodePath("AttackBehavior"), NodePath("TurnAtEdgeBehavior"), NodePath("TurnToBehindPlayer"), NodePath("WalkBehavior"), NodePath("TurnLowChanceBehavior"), NodePath("WaitBehavior")]

[node name="WaitBehavior" type="Node2D" parent="Brain"]
script = ExtResource("6_7ubij")
default_max_timer = 120

[node name="WalkBehavior" type="Node2D" parent="Brain" node_paths=PackedStringArray("enemy", "animated_sprite_2d", "conditions")]
script = ExtResource("7_qep5k")
enemy = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
conditions = [NodePath("ChanceCondition")]
default_max_timer = 120

[node name="ChanceCondition" type="Node2D" parent="Brain/WalkBehavior"]
script = ExtResource("8_shifw")
chance = 0.8

[node name="AttackBehavior" type="Node2D" parent="Brain" node_paths=PackedStringArray("enemy", "conditions")]
script = ExtResource("9_6xbpf")
enemy = NodePath("../..")
conditions = [NodePath("PlayerInRangeCondition")]
default_max_timer = 150

[node name="PlayerInRangeCondition" type="Node2D" parent="Brain/AttackBehavior" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_tta62")
enemy = NodePath("../../..")
lower_left_corner = Vector2(-28, 20)
upper_right_corner = Vector2(40, -60)

[node name="TurnLowChanceBehavior" type="Node2D" parent="Brain" node_paths=PackedStringArray("enemy", "conditions")]
script = ExtResource("10_4nkpq")
enemy = NodePath("../..")
conditions = [NodePath("ChanceCondition")]
default_max_timer = 27

[node name="ChanceCondition" type="Node2D" parent="Brain/TurnLowChanceBehavior"]
script = ExtResource("8_shifw")
chance = 0.05

[node name="TurnAtEdgeBehavior" type="Node2D" parent="Brain" node_paths=PackedStringArray("enemy", "conditions")]
script = ExtResource("10_4nkpq")
enemy = NodePath("../..")
conditions = [NodePath("AtEdgeCondition")]
default_max_timer = 27

[node name="AtEdgeCondition" type="Node2D" parent="Brain/TurnAtEdgeBehavior" node_paths=PackedStringArray("raycast_2d")]
script = ExtResource("12_uwbon")
raycast_2d = NodePath("../../../AnimatedSprite2D/EdgeRaycast")

[node name="TurnToBehindPlayer" type="Node2D" parent="Brain" node_paths=PackedStringArray("enemy", "conditions")]
script = ExtResource("10_4nkpq")
enemy = NodePath("../..")
conditions = [NodePath("PlayerInRangeCondition")]
default_max_timer = 27

[node name="PlayerInRangeCondition" type="Node2D" parent="Brain/TurnToBehindPlayer" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_tta62")
enemy = NodePath("../../..")
lower_left_corner = Vector2(-192, 60)
upper_right_corner = Vector2(-29, -60)

[connection signal="queue_idle" from="Brain/WaitBehavior" to="AnimatedSprite2D" method="queue_idle"]
[connection signal="queue_walk" from="Brain/WalkBehavior" to="AnimatedSprite2D" method="queue_walk"]
[connection signal="queue_attack" from="Brain/AttackBehavior" to="AnimatedSprite2D" method="queue_attack"]
[connection signal="queue_turn" from="Brain/TurnLowChanceBehavior" to="AnimatedSprite2D" method="queue_turn"]
[connection signal="queue_turn" from="Brain/TurnAtEdgeBehavior" to="AnimatedSprite2D" method="queue_turn"]
[connection signal="queue_turn" from="Brain/TurnToBehindPlayer" to="AnimatedSprite2D" method="queue_turn"]
